<resources>
    <string name="app_name">AdvancedProjectAndroidClient</string>
    <string name="login_btn_text">Log in</string>
    <string name="login_pwd">password</string>
    <string name="login_username">username</string>
    <string name="login_don_t_have_an_account">Don\'t have an account?\t</string>
    <string name="login_click_here_to_sign_up"><u>Click here to sign up</u></string>
    <string name="login_email">email</string>
    <string name="login_error">Error: Incorrect username or password</string>
    <string name="signup_email">Email:</string>
    <string name="signup_email_example">name@example.com</string>
    <string name="signup_username">Username:</string>
    <string name="signup_username_example">Example: JohnSmith</string>
    <string name="signup_password">Password:</string>
    <string name="signup_password_confirm">Confirm Password:</string>
    <string name="signup_password_hint">password</string>
    <string name="signup_nickname">Nickname:</string>
    <string name="signup_profile_img">profileImg</string>
    <string name="signup_nickname_example">Example: Bond007</string>
    <string name="signup_important">*</string>
    <string name="login_pwd_empty">Password must not be empty</string>
    <string name="empty">must not be empty</string>
    <string name="base_url">https://8735-132-70-1-38.eu.ngrok.io/api/</string>
    <string name="signup_phone">Phone number:</string>
    <string name="signup_security_question">Security question:</string>
    <string name="signup_phone_example">Example: 05–1234–5678</string>
    <string name="signup_secret_answer">Answer:</string>
    <string name="signup_terms_of_service_accept">I have read and accepted the\t</string>
    <string name="signup_security_answer">security answer </string>
    <string name="signup_terms_of_service">terms of service </string>
    <string name="user_s_profile_picture">User\'s profile picture</string>
    <string name="settings">Settings</string>
    <string name="signup_privacy_policy_accept">I have read and accepted the\t</string>
    <string name="signup_privacy_policy"> privacy policy </string>
    <string name="signup_button"> SIGN UP </string>
    <string name="signup_already_have_Acc"><u>I already have an account </u> </string>
    <string name="signup_choose_security_question">Choose security question</string>
    <string name="email_verification_title">Please verify your email</string>
    <string name="chat_input_bar"> New message here… </string>
    <string name="chat_send"> Send </string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="current_description">\Current description: \</string>
    <string name="new_description">\New description: \</string>
    <string name="new_description_hint">New description</string>
    <string name="new_nickname">\New nickname: \</string>
    <string name="current_nickname">Current nickname</string>
    <string name="new_nickname_hint">New nickname</string>
    <string name="current_server">Current server:</string>
    <string name="new_server">New server:</string>
    <string name="new_server_hint">New server address</string>
    <string name="chat_contact_image">User\'s profile picture</string>
    <string name="chat_attachment">Chat attachment</string>
    <string name="email_verification_6_letter">A 6 letter verification code has been sent to your
        email. Please input the code that was sent to you in the box below and then press
        submit. Input 111111 to bypass this.</string>
    <string name="email_verification_input">Verification code:</string>
    <string name="email_verification_code">code</string>
    <string name="email_verification_resend">Resend code</string>
    <string name="email_verification_submit">Submit</string>
    <string name="add_contact_heading">Add contact</string>
    <string name="add_contact_username">Username</string>
    <string name="add_contact_email">Email</string>
    <string name="add_contact_phone">Phone number</string>
    <string name="add_contact_btn">Add contact</string>
    <string name="add_contact_close">Close</string>
    <string name="add_contact">Add contact</string>
    <string name="forgot_password_username_hint">username</string>
    <string name="forgot_password_heading">Some verifications</string>
    <string name="forgot_password_writings">Before we reset your password, we would like to confirm
        your identity. Please enter your username / email, and then choose your security question
    and it\'s answer.</string>
    <string name="forgot_password_empty_answer">answer must not be empty</string>
    <string name="forgot_password_username">Username:</string>
    <string name="forgot_password_submit">Submit</string>
    <string name="forgot_password_error">Error: One or more incorrect details</string>
    <string name="forgot_password_remember"><u>I remember my password</u></string>
    <string name="reset_password_guide">To finish resetting your password, please input your new
        password and then click submit</string>
    <string name="reset_password_guide_two">After submitting, you will be re-directed to the
        login screen.</string>
    <string name="login_forgot_pass"><u>Forgot my password</u></string>
    <string name="sign_up_select_pic">Select Picture</string>
    <string name="addcontactimg">AddContactImg</string>
    <string name="enter_information_here">enter information here</string>
    <string name="add_contact_user_does_not_exist">User does not exist</string>
    <string name="add_contact_contact_already_exists">User is already your contact</string>
    <string name="add_contact_something_went_wrong">Oops! Something went wrong. Please try again later</string>
    <string name="channel_name">message_notifications</string>
    <string name="channel_description">notifications upon getting messages from other users</string>
    <string name="channel_id">1</string>
    <string name="email_verification_code_empty_error">Error: verification code can not be empty</string>
    <string name="answer_is_required">Answer is required</string>
    <string name="username_is_required">Username is required</string>
    <string name="email_verification_code_length_error">Error: verification code must be exactly 6 characters long</string>
    <string name="email_verification_code_format_error">Error: verification string must not contain any special characters</string>
    <string name="invalid_code">Invalid verification code</string>
    <string name="password_len_error">Password must be at least 8 characters long</string>
    <string name="password_format_error">Error: Password must contain at least 1 lowercase letter, 1 uppercase letter, 1 number, 1 special character, and must be at least 8 characters long.</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="password_reset_successfully">Password reset succesfully</string>
    <string name="server_error">Oops! Something went wrong, please try again later</string>
    <string name="unavailable_email_login">Currently unavailable as we did not have the time to implement it. Please log in with a username</string>
    <string name="amazing_tos">Amazing TOS</string>
    <string name="amazing_privacy_policy">Amazing privacy policy</string>
    <string name="must_agreen_tos">You must agree to the terms of service to sign up</string>
    <string name="must_agreen_privacy_policy">You must agree to the privacy policy to sign up</string>

</resources>