<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_oval"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/forgot_pass_heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/forgot_password_writings"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/forgot_pass_username_input_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="4"
                android:autofillHints="username"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="src_over"
                android:ems="10"
                android:hint="@string/forgot_password_username_hint"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/hintColor"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/forgot_pass_tv_username_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/forgot_pass_sq_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_pass_sq_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_security_question"
                    android:textColor="@color/black" />


                <Spinner
                    android:id="@+id/forgot_pass_security_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:contentDescription="@string/signup_choose_security_question"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forgot_pass_security_answer_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_pass_security_question_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_secret_answer"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/forgot_pass_security_answer_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="Secret answer"
                    android:backgroundTint="@color/black"
                    android:backgroundTintMode="src_over"
                    android:ems="10"
                    android:hint="@string/signup_security_answer"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_pass_tv_answer_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_empty_answer"
                android:textColor="@color/red"
                android:visibility="gone" />

            <Button
                android:id="@+id/forgot_pass_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/forgot_password_submit" />

            <TextView
                android:id="@+id/forgot_pass_tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_error"
                android:textColor="@color/red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgot_pass_remember_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password_remember"
                android:textColor="@color/blue" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>