<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_oval"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541">


            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/login_username"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="src_over"
                android:ems="10"
                android:hint="@string/login_username"
                android:inputType="text"
                android:minHeight="48dp"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor">

            </EditText>

            <TextView
                android:id="@+id/login_tv_username_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:visibility="gone" />


            <RadioGroup
                android:id="@+id/login_rg_email_or_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/login_rb_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/login_username"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/login_rb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_email"
                    android:textColor="@color/black" />
            </RadioGroup>

            <EditText
                android:id="@+id/login_et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/login_pwd"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="src_over"
                android:ems="10"
                android:hint="@string/login_pwd"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:shadowColor="@color/black"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor" />

            <TextView
                android:id="@+id/login_tv_pwd_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd_empty"
                android:textColor="@color/red"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/login_btn_text" />

            <TextView
                android:id="@+id/login_forgot_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_pass"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/login_tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_error"
                android:textColor="@color/red"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_don_t_have_an_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/login_tv_sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_click_here_to_sign_up"
                android:textColor="@color/blue" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>