<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactsActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <ImageView
            android:id="@+id/contacts_user_img_tv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxHeight="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/ic_person_circle"
            android:src="@drawable/ic_person_circle"
            android:layout_margin="10dp"
            android:contentDescription="@string/user_s_profile_picture" />

        <TextView
            android:id="@+id/contacts_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contacts_user_img_tv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/login_username">

        </TextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="15dp">

            <ImageView
                android:id="@+id/contacts_add_contact_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_add_contact"
                android:contentDescription="@string/add_contact" />

            <ImageView
                android:id="@+id/contacts_settings_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/settings" />

            <ImageView
                android:id="@+id/contacts_logout_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_logout"
                android:contentDescription="@string/logout" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contacts_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>