<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chat_constraint_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:id="@+id/chat_header_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/chat_header_user_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/chat_contact_image"
            app:srcCompat="@drawable/ic_person_circle"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/chat_header_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contact_img_iv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/login_username">

        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/chat_footer_ll"
    />

    <LinearLayout
        android:id="@+id/chat_footer_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="3dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/chat_attachment"
            android:minHeight="48dp"
            android:src="?attr/actionModePasteDrawable"
            android:backgroundTint="@color/green"/>

        <EditText
            android:id="@+id/chat_et_message"
            android:layout_width="278dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/chat_input_bar"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/white_oval"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/chat_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chat_send"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/green"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>